# cherry

./: .gitignore  .history  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  blockchain.db  config.yaml  convert_hypersync_query.py  data  ingest_to_postgres.py  ingester.py  logging_setup.py  main.py  parse.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  publish.yaml  publish.yml
docker-compose/: docker-compose.yaml
docs/: getting_started.md  roadmap.md
examples/: deltalake.py  erc20_custom.py  jup_swap.py  test_parallel_dlt2postgres.py  uni_v2_swaps.py
examples/address_appearences/: main.py
examples/clickhouse/: docker-compose.yaml  main.py
examples/deltalake/: main.py
examples/dextrades/: README.md  amount_usd.py  pipeline.py
examples/duckdb/: main.py
examples/end_to_end/: erc20_custom.py  jup_swap.py  reddit_deployer.py  stablecoin.py  uni_v3_swaps.py
examples/eth/: address_appearances.py  blocks.py  erc20_custom.py  reddit_deployer.py
examples/get_block_number_stats/: config.yaml  get_block_number_stats.py
examples/glaciers/: decode_logs_with_glaciers.py
examples/iceberg/: docker-compose.yaml  main.py
examples/local_parquet/: main.py
examples/main/: config.yaml
examples/orca_whirpool/: main.py
examples/parquet/: main.py
examples/pyarrow_dataset_writer/: main.py
examples/raydium_amm/: docker-compose.yaml  main.py
examples/resume_from_last_block_number/: config.yaml  with_duckdb_minio.py
examples/setup_without_config/: config.yaml
examples/solana_token_balances/: main.py
examples/uniswap_swaps/: main.py
examples/uniswap_v2_swaps/: docker-compose.yaml  main.py
scripts/: config.py  event_data_config_backup.json  get_event_data.py  test_parallel_sample_load_postgres.py  util.py
scripts/hypersync/: config.json  config.yaml  event_list.json  get_block_data.py
scripts/sqd/: cherry_core_init.py  cherry_ingest_erc20.py
scripts/utils/: postgres_to_postgres.py  read_parquet.py  test_parallel_dlt2duckdb.py
src/cherry/: __init__.py  config.py  pipeline.py
src/cherry_etl/: __init__.py  config.py  core.py  pipeline.py  utils.py
src/cherry_indexer/: __init__.py  config.py  pipeline.py
src/cherry_indexer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/config/: parser.py
src/db/: parquet.py  postgres.py
src/ingesters/: base.py  eth_rpc.py  factory.py  hypersync.py  ingester.py  streams.py
src/loaders/: base.py  loader.py  parquet.py  parquet_loader.py  postgres.py  postgres_loader.py  s3.py
src/processors/: event_processor.py  hypersync.py  sqd.py
src/schemas/: arrow_schemas.py  athena.py  base.py  blockchain_schemas.py  clickhouse.py  database_schemas.py  dataframe_schemas.py
tests/: README.md  conftest.py  test_steps.py
(+125 files in other folders)
