[project]
name = "cherry-etl"
version = "0.0.4"
description = "Library for building blockchain pipelines"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  { name = "Enes Topuz", email = "tpzenes@gmail.com" },
  { name = "Ozgur Akkurt", email = "oezgurmakkurt@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "cherry-core>=0.0.17",
    "pyarrow>=19.0.1",
    "sqlalchemy>=2.0.38",
    "psycopg2>=2.9.10",
    "pyiceberg>=0.8.1",
    "clickhouse-connect>=0.8.15",
    "dotenv>=0.9.9",
    "deltalake>=0.24.0",
    "pyarrow-stubs>=17.17",
]

[dependency-groups]
dev = [
    "pyright>=1.1.396",
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cherry"]

