[project]
name = "cherry-etl"
version = "0.0.7"
description = "Library for building blockchain pipelines"
repository = "https://github.com/steelcake/cherry"
homepage = "https://github.com/steelcake/cherry"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  { name = "Enes Topuz", email = "tpzenes@gmail.com" },
  { name = "Ozgur Akkurt", email = "oezgurmakkurt@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "cherry-core>=0.0.21",
    "pyarrow>=19.0.1",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "pyiceberg>=0.8.1",
    "clickhouse-connect>=0.8.15",
    "deltalake>=0.24.0",
    "pyarrow-stubs>=17.17",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pyright>=1.1.397",
    "ruff>=0.9.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cherry"]

