[project]
name = "cherry-etl"
version = "0.6.5"
description = "Library for building blockchain pipelines"
repository = "https://github.com/steelcake/cherry"
homepage = "https://github.com/steelcake/cherry"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  { name = "Ozgur Akkurt", email = "ozgur@steelcake.com" },
  { name = "Yule Andrade", email = "yule@steelcake.com" },
]
requires-python = ">=3.11"
dependencies = [
    "cherry-core>=0.5.8",
    "pyarrow>=19.0.1",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.10",
    "pyiceberg>=0.8.1",
    "clickhouse-connect>=0.8.15",
    "deltalake>=0.24.0",
    "pyarrow-stubs>=17.17",
    "polars>=1.25.2",
    "duckdb>=1.2.1",
    "glaciers>=2.0.2",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pyright>=1",
    "pytest>=8.3.5",
    "ruff>=0.9.7",
    "dexmetadata>=0.1.8",
    "base58>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

